--- a/tools/jsii-compliance/package.json
+++ b/tools/jsii-compliance/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "description": "",
   "scripts": {
-    "report": "ts-node report.ts",
+    "build": "yarn suite",
+    "suite": "ts-node suite.ts",
+    "report": "yarn suite && ts-node report.ts",
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "yarn lint --fix"
   },
