use ts as source of schema instead of json

--- a/tools/jsii-compliance/package.json
+++ b/tools/jsii-compliance/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "description": "",
   "scripts": {
-    "build": "yarn suite",
-    "suite": "ts-node suite.ts",
-    "report": "yarn suite && ts-node report.ts",
+    "report": "ts-node report.ts",
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "yarn lint --fix"
   },
