ignore local modules in dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -56,6 +56,10 @@ updates:
     labels:
       - dependencies
       - language/go
+    ignore:
+      - dependency-name: github.com/aws/jsii-runtime-go
+      - dependency-name: github.com/aws/jsii-runtime-go/*
+      - dependency-name: github.com/aws/jsii/jsii-calc/go/*
 
   - package-ecosystem: gomod
     directory: '/packages/@jsii/go-runtime/jsii-runtime-go'
@@ -64,6 +68,10 @@ updates:
     labels:
       - dependencies
       - language/go
+    ignore:
+      - dependency-name: github.com/aws/jsii-runtime-go
+      - dependency-name: github.com/aws/jsii-runtime-go/*
+      - dependency-name: github.com/aws/jsii/jsii-calc/go/*
 
   - package-ecosystem: github-actions
     directory: '/'
