feat(go): support direct implementation of jsii interfaces (#2614)
Pure go implementations of jsii interfaces are detected upon being
passed as a parameter to a JavaScript call. When this happens, a
`create` call is sent to the `@jsii/kernel` process with the correct
list of implemented interface FQNs, and all necessary overrides records.
The object is then registered into the new `ObjectStore` for later
reference.

When a callback request interrupts the normal request/response flow, the
`kernel.Client` will handle the callback by getting the appropriate
receiver object, invoking the designated go implementation, and sending
the result to the `@jsii/kernel` process before resuming normal response
handling.

Related to #2048 (partial support)

--- a/packages/@jsii/go-runtime/package.json
+++ b/packages/@jsii/go-runtime/package.json
@@ -6,13 +6,16 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc --build && npm run gen:rt",
-    "fmt": "node build-tools/all-go.js fmt ./...",
+    "doc": "yarn --silent go:run godoc",
+    "fmt": "yarn --silent go:all yarn --silent go:run goimports .",
     "gen:calc": "node build-tools/gen-calc.js",
     "gen:rt": "node build-tools/gen.js",
     "generate": "npm run gen:rt && npm run gen:calc",
+    "go:all": "node build-tools/all-go.js",
+    "go:run": "go mod download && node build-tools/go-run.js",
     "package": "build-tools/package.sh",
-    "lint": "node build-tools/all-go.js vet ./...",
-    "test": "npm run gen:calc && node build-tools/all-go.js test ./..."
+    "lint": "yarn --silent go:all go vet ./... && yarn --silent go:all yarn --silent go:run golint ./...",
+    "test": "npm run gen:calc && yarn --silent go:all go test ./..."
   },
   "keywords": [],
   "author": "",
