--- a/packages/@jsii/dotnet-runtime/src/Amazon.JSII.Runtime.UnitTests/Amazon.JSII.Runtime.UnitTests.csproj
+++ b/packages/@jsii/dotnet-runtime/src/Amazon.JSII.Runtime.UnitTests/Amazon.JSII.Runtime.UnitTests.csproj
@@ -12,6 +12,12 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 
     <RollForward>Major</RollForward>
+    
+    <NoWarn>
+      CA1034, <!-- Nested types should not be visible -->
+      CA1711, <!-- Identifiers should not have incorrect suffix -->
+      CA1724, <!-- Type names should not match namespaces -->
+    </NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
