chore(go): make Load call idempotent
Making the `Load` runtime library call idempotent makes it so that the
`Client` can be fully disposed (via the `Close` call), while
subsequently getting a new client starte up if needed.

This is in particular useful for implementing test suites that operate
on a clean kernel instance each time.

--- a/packages/@jsii/go-runtime/package.json
+++ b/packages/@jsii/go-runtime/package.json
@@ -11,7 +11,7 @@
     "go:run": "go mod download && node build-tools/go-run.js",
     "package": "build-tools/package.sh",
     "doc": "(cd jsii-runtime-go && yarn --silent go:run godoc)",
-    "fmt": "(cd jsii-runtime-go && yarn --silent go:all yarn --silent go:run goimports .)",
+    "fmt": "yarn --silent go:run goimports -w jsii-runtime-go",
     "lint": "(cd jsii-runtime-go && go vet ./... && yarn --silent go:run golint ./...)",
     "test": "(cd jsii-runtime-go && go test ./...)"
   },
