--- a/packages/jsii-pacmak/package.json
+++ b/packages/jsii-pacmak/package.json
@@ -64,6 +64,7 @@
     "@types/yargs": "^16.0.0",
     "eslint": "^7.20.0",
     "jest": "^26.6.3",
+    "jsii": "^0.0.0",
     "jsii-build-tools": "^0.0.0",
     "jsii-calc": "^3.20.120",
     "prettier": "^2.2.1",
