--- a/packages/jsii-pacmak/tsconfig.json
+++ b/packages/jsii-pacmak/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "extends": "../../tsconfig-base",
-  "include": [
-    "**/*.ts"
-  ],
-  "exclude": ["jest.config.ts"],
+  "include": ["**/*.ts"],
+  "exclude": ["jest.config.ts", "test/generated-code/examples/*"],
   "references": [
     { "path": "../@jsii/spec" },
     { "path": "../codemaker" },
     { "path": "../jsii-rosetta" },
-    { "path": "../jsii-reflect" },
-  ],
+    { "path": "../jsii-reflect" }
+  ]
 }
