fix(python): duplicated kwargs when field is multi-inherited
When a struct field is inherited from more than one parent (this could
be twice from the same type - in the case of a diamond shape; or from
two distinct parents that declare the same field), the lifted keyword
arguments in python would be duplicated for this field.

This is because the method that performs the keyword argument lifting
did not perform name-based de-duplication, and operates directly on the
"raw" assembly (whereby it must traverse the inheritance tree itself,
as opposed to the Go generator which uses `jsii-reflect` and has the
field collection done by that library).

Added the necessary de-duplication logic and confirmed the produced code
now looks correct using the exact same test harness as I had introduced
in #2650.

Fixes #2653

--- a/packages/jsii-pacmak/tsconfig.json
+++ b/packages/jsii-pacmak/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "extends": "../../tsconfig-base",
-  "include": [
-    "**/*.ts"
-  ],
-  "exclude": ["jest.config.ts"],
+  "include": ["**/*.ts"],
+  "exclude": ["jest.config.ts", "test/generated-code/examples/*"],
   "references": [
     { "path": "../@jsii/spec" },
     { "path": "../codemaker" },
+    { "path": "../jsii" },
     { "path": "../jsii-rosetta" },
-    { "path": "../jsii-reflect" },
-  ],
+    { "path": "../jsii-reflect" }
+  ]
 }
