--- a/packages/jsii-pacmak/tsconfig.json
+++ b/packages/jsii-pacmak/tsconfig.json
@@ -5,6 +5,7 @@
   "references": [
     { "path": "../@jsii/spec" },
     { "path": "../codemaker" },
+    { "path": "../jsii" },
     { "path": "../jsii-rosetta" },
     { "path": "../jsii-reflect" }
   ]
