--- a/tools/jsii-compliance/package.json
+++ b/tools/jsii-compliance/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "",
   "scripts": {
+    "build": "echo 'build not needed for the jsii-compliance package'",
     "report": "ts-node report.ts",
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "yarn lint --fix"
