feat(go): packageName and versionSuffix
Add two features to the `go` targets config in package.json:

- `packageName` can be used to customize the name of the go package (previously this was always derived from the javascript name).
- `versionSuffix` can be used to append a suffix to the version number (e.g. `-devpreview`).

Resolves #2632

--- a/packages/@scope/jsii-calc-base/package.json
+++ b/packages/@scope/jsii-calc-base/package.json
@@ -55,7 +55,8 @@
     "outdir": "dist",
     "targets": {
       "go": {
-        "moduleName": "github.com/aws/jsii/jsii-calc/go"
+        "moduleName": "github.com/aws/jsii/jsii-calc/go",
+        "packageName": "jcb"
       },
       "java": {
         "package": "software.amazon.jsii.tests.calculator.base",
