--- a/packages/@scope/jsii-calc-lib/package.json
+++ b/packages/@scope/jsii-calc-lib/package.json
@@ -49,7 +49,8 @@
     "outdir": "dist",
     "targets": {
       "go": {
-        "moduleName": "github.com/aws/jsii/jsii-calc/go"
+        "moduleName": "github.com/aws/jsii/jsii-calc/go",
+        "versionSuffix": "-devpreview"
       },
       "java": {
         "package": "software.amazon.jsii.tests.calculator.lib",
