--- a/packages/@scope/jsii-calc-lib/lib/submodule/.jsiirc.json
+++ b/packages/@scope/jsii-calc-lib/lib/submodule/.jsiirc.json
@@ -8,6 +8,9 @@
     },
     "python": {
       "module": "scope.jsii_calc_lib.custom_submodule_name"
+    },
+    "go" :{
+      "packageName": "customsubmodulename"
     }
   }
 }
