--- a/packages/jsii-calc/package.json
+++ b/packages/jsii-calc/package.json
@@ -38,7 +38,8 @@
     "lint": "eslint . --ext .js,.ts --ignore-path=.gitignore",
     "lint:fix": "yarn lint --fix",
     "test": "(ls test/test.*.js | xargs -n1 node) && diff-test test/assembly.jsii .jsii",
-    "test:update": "npm run build && UPDATE_DIFF=1 npm run test"
+    "test:update": "npm run build && UPDATE_DIFF=1 npm run test",
+    "update": "./update-all.sh"
   },
   "dependencies": {
     "@fixtures/jsii-calc-bundled": "file:../@fixtures/jsii-calc-bundled",
