--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -11,6 +11,8 @@ jobs:
   superchain:
     name: jsii/superchain
     runs-on: ubuntu-latest
+    env:
+      NODE_VERSIONS: "10 14"
     steps:
       - name: Check out
         uses: actions/checkout@v2
@@ -40,44 +42,62 @@ jobs:
           fi
 
       # We only authenticate to Docker for 'push' events, as 'pull_request' from forks will not have the secret
-      - name: Login to Docker
-        if: steps.should-run.outputs.result == 'true' && github.event_name == 'push'
-        # The DOCKER_CREDENTIALS secret is expected to contain a username:token pair
-        run: |-
-          docker login                                                          \
-            --username=$(cut -d: -f1 <<< '${{ secrets.DOCKER_CREDENTIALS }}')   \
-            --password=$(cut -d: -f2 <<< '${{ secrets.DOCKER_CREDENTIALS }}')
-        # Ensure we run with bash, because that's the syntax we're using here...
-        shell: bash
+      #- name: Login to Docker
+        #if: steps.should-run.outputs.result == 'true' && github.event_name == 'push'
+        ## The DOCKER_CREDENTIALS secret is expected to contain a username:token pair
+        #run: |-
+          #docker login                                                          \
+            #--username=$(cut -d: -f1 <<< '${{ secrets.DOCKER_CREDENTIALS }}')   \
+            #--password=$(cut -d: -f2 <<< '${{ secrets.DOCKER_CREDENTIALS }}')
+        ## Ensure we run with bash, because that's the syntax we're using here...
+        #shell: bash
 
       - name: Build Image
         if: steps.should-run.outputs.result == 'true'
         run: |-
-          docker build                                                          \
-            --pull                                                              \
-            --build-arg BUILD_TIMESTAMP="$(date -u +'%Y-%m-%dT%H:%M:%SZ')"      \
-            --build-arg COMMIT_ID='${{ github.sha }}'                           \
-            --tag 'jsii/superchain:nightly'                                     \
-            ./superchain
+          for node_version in $NODE_VERSIONS; do
+            echo "🏗 Building jsii/superchain:node${node_version}-nightly"
+            docker build                                                        \
+              --pull                                                            \
+              --build-arg BUILD_TIMESTAMP="$(date -u +'%Y-%m-%dT%H:%M:%SZ')"    \
+              --build-arg COMMIT_ID='${{ github.sha }}'                         \
+              --build-arg NODE_VERSION=$node_version                            \
+              --tag "jsii/superchain:node${node_version}-nightly"               \
+              ./superchain
+          done
       - name: Test Image
         if: steps.should-run.outputs.result == 'true'
         run: |-
-          docker run                                                            \
-            --rm                                                                \
-            --tty                                                               \
-            --network=host                                                      \
-            -v${{ github.workspace }}:${{ github.workspace }}                   \
-            -w${{ github.workspace }}                                           \
-            'jsii/superchain:nightly'                                           \
-            bash -c "yarn install --frozen-lockfile && yarn build && yarn test"
+          for node_version in $NODE_VERSIONS; do
+            echo "🔬 Testing jsii/superchain:node${node_version}-nightly"
+            docker run                                                          \
+              --rm                                                              \
+              --tty                                                             \
+              --network=host                                                    \
+              -v${{ github.workspace }}:${{ github.workspace }}                 \
+              -w${{ github.workspace }}                                         \
+              "jsii/superchain:node${node_version}-nightly"                     \
+              bash -c "yarn install --frozen-lockfile && yarn build && yarn test"
+          done
 
       # Only when puhsing to main/release from now on
       - name: Publish (nightly)
         if: steps.should-run.outputs.result == 'true' && github.event_name == 'push' && github.ref != 'refs/heads/release'
         run: |-
+          for node_version in $NODE_VERSIONS; do                                \
+            docker push jsii/superchain:node${node_version}-nightly
+          done
+          # Alias 'node10-nightly' to regular 'nightly' for backwards compatibility
+          docker tag jsii/superchain:node10-nightly jsii/superchain:nightly
           docker push jsii/superchain:nightly
       - name: Publish (latest)
         if: steps.should-run.outputs.result == 'true' && github.event_name == 'push' && github.ref == 'refs/heads/release'
         run: |-
-          docker tag jsii/superchain:nightly jsii/superchain:latest
+          # Alias 'nodeX-nightly's to 'nodeX', then push
+          for node_version in $NODE_VERSIONS; do                                \
+            docker tag jsii/superchain:node${node_version}-nightly jsii/superchain:node${node_version}
+            docker push jsii/superchain:node${node_version}
+          done
+          # Alias 'node10' to 'latest' for backwards compatibility
+          docker tag jsii/superchain:node10 jsii/superchain:latest
           docker push jsii/superchain:latest
