--- a/.mergify/config.yml
+++ b/.mergify/config.yml
@@ -30,7 +30,7 @@ pull_request_rules:
       - '#changes-requested-reviews-by=0'
       - status-success=Semantic Pull Request
       # Docker image validation
-      - status-success=jsii/superchain
+      - status-success~=^jsii/superchain
       # One test for each OS
       - status-success~=^Test \(ubuntu-.*$
       - status-success~=^Test \(macos-.*$
@@ -79,7 +79,7 @@ pull_request_rules:
       - '#changes-requested-reviews-by=0'
       - status-success=Semantic Pull Request
       # Docker image validation
-      - status-success=jsii/superchain
+      - status-success~=^jsii/superchain
       # One test for each OS
       - status-success~=^Test \(ubuntu-.*$
       - status-success~=^Test \(macos-.*$
@@ -128,7 +128,7 @@ pull_request_rules:
       - '#changes-requested-reviews-by=0'
       - status-success=Semantic Pull Request
       # Docker image validation
-      - status-success=jsii/superchain
+      - status-success~=^jsii/superchain
       # One test for each OS
       - status-success~=^Test \(ubuntu-.*$
       - status-success~=^Test \(macos-.*$
