--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -11,6 +11,12 @@ jobs:
   superchain:
     name: jsii/superchain
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: ['10', '14']
+    env:
+      # Node version whose images will be aliased to 'nightly' and 'latest'
+      DEFAULT_NODE_MAJOR_VERSION: 10
     steps:
       - name: Check out
         uses: actions/checkout@v2
@@ -53,31 +59,45 @@ jobs:
       - name: Build Image
         if: steps.should-run.outputs.result == 'true'
         run: |-
-          docker build                                                          \
-            --pull                                                              \
-            --build-arg BUILD_TIMESTAMP="$(date -u +'%Y-%m-%dT%H:%M:%SZ')"      \
-            --build-arg COMMIT_ID='${{ github.sha }}'                           \
-            --tag 'jsii/superchain:nightly'                                     \
+          docker build                                                        \
+            --pull                                                            \
+            --build-arg BUILD_TIMESTAMP="$(date -u +'%Y-%m-%dT%H:%M:%SZ')"    \
+            --build-arg COMMIT_ID='${{ github.sha }}'                         \
+            --build-arg NODE_MAJOR_VERSION=${{ matrix.node }}                 \
+            --tag "jsii/superchain:node${{ matrix.node }}-nightly"            \
             ./superchain
       - name: Test Image
         if: steps.should-run.outputs.result == 'true'
         run: |-
-          docker run                                                            \
-            --rm                                                                \
-            --tty                                                               \
-            --network=host                                                      \
-            -v${{ github.workspace }}:${{ github.workspace }}                   \
-            -w${{ github.workspace }}                                           \
-            'jsii/superchain:nightly'                                           \
+          docker run                                                          \
+            --rm                                                              \
+            --tty                                                             \
+            --network=host                                                    \
+            -v${{ github.workspace }}:${{ github.workspace }}                 \
+            -w${{ github.workspace }}                                         \
+            "jsii/superchain:node${{ matrix.node }}-nightly"                  \
             bash -c "yarn install --frozen-lockfile && yarn build && yarn test"
 
       # Only when puhsing to main/release from now on
       - name: Publish (nightly)
         if: steps.should-run.outputs.result == 'true' && github.event_name == 'push' && github.ref != 'refs/heads/release'
         run: |-
-          docker push jsii/superchain:nightly
+          docker push jsii/superchain:node${{ matrix.node }}-nightly
+
+          # If the current version is the default version, also tag this with the unqualified ':nightly' label
+          if [[ "${{ matrix.node }}" == "$DEFAULT_NODE_MAJOR_VERSION" ]]; then
+            docker tag jsii/superchain:node${{ matrix.node }}-nightly jsii/superchain:nightly
+            docker push jsii/superchain:nightly
+          fi
       - name: Publish (latest)
         if: steps.should-run.outputs.result == 'true' && github.event_name == 'push' && github.ref == 'refs/heads/release'
         run: |-
-          docker tag jsii/superchain:nightly jsii/superchain:latest
-          docker push jsii/superchain:latest
+          # Alias 'nodeX-nightly's to 'nodeX', then push
+          docker tag jsii/superchain:node${{ matrix.node }}-nightly jsii/superchain:node${{ matrix.node }}
+          docker push jsii/superchain:node${{ matrix.node }}
+
+          # If the current version is the default version, also tag this with the unqualified ':latest' label
+          if [[ "${{ matrix.node }}" == "$DEFAULT_NODE_MAJOR_VERSION" ]]; then
+            docker tag jsii/superchain:node${{ matrix.node }} jsii/superchain:latest
+            docker push jsii/superchain:latest
+          fi
