--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches: [main]
     paths: [gh-pages/**]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -49,7 +50,7 @@ jobs:
   publish:
     name: Publish
     needs: build
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - name: Check out
