--- a/packages/@jsii/runtime/tsconfig.json
+++ b/packages/@jsii/runtime/tsconfig.json
@@ -1,14 +1,9 @@
 {
   "extends": "../../../tsconfig-base",
-  "include": [
-    "**/*.ts",
-    "package.json"
-  ],
-  "exclude": [
-    "package.d.ts",
-    "jest.config.ts",
-  ],
-  "references": [
-    { "path": "../kernel" },
-  ],
+  "compilerOptions": {
+    "importHelpers": true
+  },
+  "include": ["**/*.ts", "package.json"],
+  "exclude": ["package.d.ts", "jest.config.ts"],
+  "references": [{ "path": "../kernel" }]
 }
