--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '8'
+          distribution: 'zulu'
       - name: Set up Node 12
         uses: actions/setup-node@v2.1.5
         with:
@@ -125,6 +126,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '8'
+          distribution: 'zulu'
       - name: Set up Node 12
         uses: actions/setup-node@v2.1.5
         with:
@@ -276,6 +278,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
+          distribution: 'zulu'
       - name: Set up Node ${{ matrix.node }}
         uses: actions/setup-node@v2.1.5
         with:
