private-package the go runtime, so integ test have it

--- a/packages/@jsii/go-runtime/package.json
+++ b/packages/@jsii/go-runtime/package.json
@@ -9,7 +9,7 @@
     "gen:rt": "node build-tools/gen.js",
     "generate": "npm run gen:rt",
     "go:run": "go mod download && node build-tools/go-run.js",
-    "package": "build-tools/package.sh",
+    "package": "build-tools/package.sh && package-private",
     "doc": "(cd jsii-runtime-go && yarn --silent go:run godoc)",
     "fmt": "yarn --silent go:run goimports -w jsii-runtime-go",
     "lint": "(cd jsii-runtime-go && go vet ./... && yarn --silent go:run golint ./...)",
@@ -28,6 +28,7 @@
     "codemaker": "^0.0.0",
     "eslint": "^7.23.0",
     "fs-extra": "^9.1.0",
+    "jsii-build-tools": "^0.0.0",
     "jsii-calc": "^3.20.120",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
