--- a/.github/workflows/yarn-upgrade.yml
+++ b/.github/workflows/yarn-upgrade.yml
@@ -1,9 +1,10 @@
 name: Yarn Upgrade
 
 on:
-  schedule:
+  # Temporarily disable this workflow
+  #schedule:
     # Every wednesday at 13:37 UTC
-    - cron: 37 13 * * 3
+    #- cron: 37 13 * * 3
   workflow_dispatch: {}
 
 jobs:
