chore: permissions for github actions
By default, all Github actions have read permissions via the standard
`GITHUB_TOKEN`. For jobs that require write permission, explicitly
add the necessary permissions.

In the case of the 'Yarn Upgrade' Github action, separated the
'upgrade' step and the 'pull request' step into separate
jobs to build a better security boundary between the two.

Inspired from: https://github.com/projen/projen/blob/a4f875d07b57f8f8247b9352e34c3c83759afe82/.github/workflows/upgrade-dependencies.yml

--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -10,6 +10,8 @@ jobs:
        (github.event.pull_request.user.login == 'aws-cdk-automation' 
         || github.event.pull_request.user.login == 'dependabot[bot]' 
         || github.event.pull_request.user.login == 'dependabot-preview[bot]')
+    permissions:
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
     - uses: hmarr/auto-approve-action@v2.1.0
