--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   superchain:
     name: jsii/superchain
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     strategy:
       matrix:
