--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
   build:
     name: Build
     permissions:
-      content: read
+      contents: read
     runs-on: ubuntu-latest
     steps:
       # Set up all of our standard runtimes
@@ -114,7 +114,7 @@ jobs:
   create-release-package:
     name: Create Release Package
     permissions:
-      content: read
+      contents: read
     runs-on: ubuntu-latest
     steps:
       # Set up all of our standard runtimes
