fix(dotnet): strong-name sign assemblies
In order for generated assemblies to be strong-name signed, their
dependencies need to also be strong-name signed, but we were not
strong-name signing the jsii runtime for .NET.

Additionally, the `AssemblyOriginatorKeyFile` was configured, but it was
not actually copied into the generated codebase, leading to the
signature process being skipped entirely (for we only sign if they key
is present).

--- a/packages/@jsii/dotnet-runtime-test/test/Amazon.JSII.Runtime.IntegrationTests/Amazon.JSII.Runtime.IntegrationTests.csproj
+++ b/packages/@jsii/dotnet-runtime-test/test/Amazon.JSII.Runtime.IntegrationTests/Amazon.JSII.Runtime.IntegrationTests.csproj
@@ -13,6 +13,9 @@
         <VSTestLogger>xunit</VSTestLogger>
 
         <RollForward>Major</RollForward>
+
+        <SignAssembly>true</SignAssembly>
+        <AssemblyOriginatorKeyFile>..\..\..\dotnet-runtime\keypair.snk</AssemblyOriginatorKeyFile>
     </PropertyGroup>
 
     <ItemGroup>
