--- a/packages/@jsii/dotnet-runtime/src/Amazon.JSII.Analyzers/Amazon.JSII.Analyzers.csproj
+++ b/packages/@jsii/dotnet-runtime/src/Amazon.JSII.Analyzers/Amazon.JSII.Analyzers.csproj
@@ -10,6 +10,9 @@
 
         <EnableNETAnalyzers>true</EnableNETAnalyzers>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+
+        <SignAssembly>true</SignAssembly>
+        <AssemblyOriginatorKeyFile>..\..\keypair.snk</AssemblyOriginatorKeyFile>
     </PropertyGroup>
 
     <ItemGroup>
