--- a/packages/@scope/jsii-calc-base/package.json
+++ b/packages/@scope/jsii-calc-base/package.json
@@ -66,6 +66,8 @@
         }
       },
       "dotnet": {
+        "assemblyOriginatorKeyFile": "keypair.snk",
+        "signAssembly": true,
         "namespace": "Amazon.JSII.Tests.CalculatorNamespace.BaseNamespace",
         "packageId": "Amazon.JSII.Tests.CalculatorPackageId.BasePackageId"
       },
