--- a/packages/@scope/jsii-calc-lib/package.json
+++ b/packages/@scope/jsii-calc-lib/package.json
@@ -61,6 +61,8 @@
         }
       },
       "dotnet": {
+        "assemblyOriginatorKeyFile": "keypair.snk",
+        "signAssembly": true,
         "namespace": "Amazon.JSII.Tests.CalculatorNamespace.LibNamespace",
         "packageId": "Amazon.JSII.Tests.CalculatorPackageId.LibPackageId",
         "versionSuffix": "-devpreview"
