--- a/packages/@jsii/dotnet-runtime/src/Amazon.JSII.JsonModel/Amazon.JSII.JsonModel.csproj
+++ b/packages/@jsii/dotnet-runtime/src/Amazon.JSII.JsonModel/Amazon.JSII.JsonModel.csproj
@@ -12,6 +12,9 @@
 
     <Nullable>enable</Nullable>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\keypair.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
