--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -239,6 +239,13 @@ jobs:
             node: '10'
             os: ubuntu-latest
             python: '3.6'
+          - java: '8'
+            dotnet: '6.0.x'
+            dotnet-prerelease: true
+            go: '1.16'
+            node: '10'
+            os: ubuntu-latest
+            python: '3.6'
           # Test alternate Javas
           - java: '11'
             dotnet: '3.1.x'
@@ -274,6 +281,7 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: ${{ matrix.dotnet }}
+          include-prerelease: ${{ matrix.dotnet-prerelease }}
       - name: Set up Go ${{ matrix.go }}
         uses: actions/setup-go@v2
         with:
