--- a/.github/workflows/yarn-upgrade.yml
+++ b/.github/workflows/yarn-upgrade.yml
@@ -10,7 +10,7 @@ jobs:
   upgrade:
     name: Yarn Upgrade
     permissions:
-      content: read
+      contents: read
     runs-on: ubuntu-latest
     steps:
 
@@ -20,19 +20,8 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v2.4.0
         with:
+          cache: yarn
           node-version: 10
-
-      - name: Locate Yarn cache
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - name: Restore Yarn cache
-        uses: actions/cache@v2.1.6
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |-
-            ${{ runner.os }}-yarn-
 
       - name: Install Tools
         run: |-
