chore: upgrade xmldom from 0.6.0 to 0.7.0
This uses a custom resolution to the xmldom GitHub repoisoty, as they
are currently unable to publish the fixed version to npmjs.com. See
xmldom/xmldom#271 for more information. The custom resolution can be
removed once npmjs.com has 0.7.0 or above.

--- a/packages/jsii-rosetta/package.json
+++ b/packages/jsii-rosetta/package.json
@@ -35,7 +35,7 @@
     "commonmark": "^0.29.3",
     "fs-extra": "^9.1.0",
     "typescript": "~3.9.9",
-    "xmldom": "^0.6.0",
+    "xmldom": "github:xmldom/xmldom#0.7.0",
     "yargs": "^16.2.0"
   },
   "license": "Apache-2.0",
