fix npm cache folder permissions

--- a/superchain/Dockerfile
+++ b/superchain/Dockerfile
@@ -89,9 +89,10 @@ VOLUME /var/lib/docker
 # for most of the multiple builds).
 ARG NODE_MAJOR_VERSION=12
 
-RUN curl -sL https://rpm.nodesource.com/setup_${NODE_MAJOR_VERSION}.x | bash -                                                \
+RUN curl -sL https://rpm.nodesource.com/setup_${NODE_MAJOR_VERSION}.x | bash -                                          \
   && yum -y install nodejs                                                                                              \
   && yum clean all && rm -rf /var/cache/yum                                                                             \
+  && chown -R 1001:121 "/root/.npm"                                                                                     \
   && npm set unsafe-perm true
 
 # Install Yarn
