feat: node runtime version check
Checks the current version of `node` against a list of SemVer rangers
that are configured in `@jsii/node-check`, and emit a BIG FAT warning
to STDERR (with color if possible) in case the version is found to be
end-of-life, deprecated, or untested, so that users know that they are
subjecting themselves to random problems.

When marking a range as deprecated, a deadline is also provided in the
message, informing users about when the releases will move to the
end-of-life support level.

--- a/packages/jsii-reflect/tsconfig.json
+++ b/packages/jsii-reflect/tsconfig.json
@@ -3,8 +3,9 @@
   "include": ["**/*.ts"],
   "exclude": ["jest.config.ts"],
   "references": [
-    { "path": "../jsii" },
+    { "path": "../@jsii/node-check" },
     { "path": "../@jsii/spec" },
+    { "path": "../jsii" },
     { "path": "../oo-ascii-tree" },
   ]
 }
