--- a/packages/jsii-rosetta/tsconfig.json
+++ b/packages/jsii-rosetta/tsconfig.json
@@ -9,7 +9,8 @@
     "jest.config.ts",
   ],
   "references": [
-      { "path": "../jsii" },
-      { "path": "../@jsii/spec" },
+    { "path": "../@jsii/node-check" },
+    { "path": "../@jsii/spec" },
+    { "path": "../jsii" },
   ],
 }
