--- a/packages/jsii/tsconfig.json
+++ b/packages/jsii/tsconfig.json
@@ -2,5 +2,8 @@
   "extends": "../../tsconfig-base",
   "include": ["**/*.ts"],
   "exclude": ["test/negatives/*", "jest.config.ts"],
-  "references": [{ "path": "../@jsii/spec" }]
+  "references": [
+    { "path": "../@jsii/node-check" },
+    { "path": "../@jsii/spec" },
+  ]
 }
